--- a/_config.yml
+++ b/_config.yml
@@ -141,14 +141,14 @@ newsletter:
 # -----------------------------------------------------------------------------
 
 collections:
-  books:
-    output: true
+  # books:
+  #   output: true
   news:
     defaults:
       layout: post
-    output: true
-  projects:
-    output: true
+    output: false
+  # projects:
+  #   output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
