--- a/_config.yml
+++ b/_config.yml
@@ -191,30 +191,36 @@ exclude:
   - vendor
   - _pages/blog.md
   - _posts/
-  - _projects/?_project.md
+  - _projects
+  - _pages/projects.md
+  - _pages/repositories.md
+  - _pages/teaching.md
+  - _pages/people.md
+  - _pages/dropdown.md
+  
 keep_files:
   - CNAME
   - .nojekyll
 
-# Plug-ins
-plugins:
-  - jekyll-archives-v2
-  - jekyll-email-protect
-  - jekyll-feed
-  - jekyll-get-json
-  - jekyll-imagemagick
-  - jekyll-jupyter-notebook
-  - jekyll-link-attributes
-  - jekyll-minifier
-  - jekyll-paginate-v2
-  - jekyll-regex-replace
-  - jekyll/scholar
-  - jekyll-sitemap
-  - jekyll-tabs
-  - jekyll-terser
-  - jekyll-toc
-  - jekyll-twitter-plugin
-  - jemoji
+# # Plug-ins
+# plugins:
+#   - jekyll-archives-v2
+#   - jekyll-email-protect
+#   - jekyll-feed
+#   - jekyll-get-json
+#   - jekyll-imagemagick
+#   - jekyll-jupyter-notebook
+#   - jekyll-link-attributes
+#   - jekyll-minifier
+#   - jekyll-paginate-v2
+#   - jekyll-regex-replace
+#   - jekyll/scholar
+#   - jekyll-sitemap
+#   - jekyll-tabs
+#   - jekyll-terser
+#   - jekyll-toc
+#   - jekyll-twitter-plugin
+#   - jemoji
 
 # Sitemap settings
 defaults:
