--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,12 +1,12 @@
-"wang":
-  - firstname: ["Jindong"]
-    url: https://jd92.wang/
+# "wang":
+#   - firstname: ["Jindong"]
+#     url: https://jd92.wang/
 
-"xie":
-  - firstname: ["Xing"]
-    url: https://www.microsoft.com/en-us/research/people/xingx/?from=https://research.microsoft.com/users/xingx&type=exact
+# "xie":
+#   - firstname: ["Xing"]
+#     url: https://www.microsoft.com/en-us/research/people/xingx/?from=https://research.microsoft.com/users/xingx&type=exact
 
-"ji":
-  - firstname: ["Heng"]
-    url: https://blender.cs.illinois.edu/hengji.html
+# "ji":
+#   - firstname: ["Heng"]
+#     url: https://blender.cs.illinois.edu/hengji.html
 
